manifests/apps/gateway/kaito-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kaito-gateway
  annotations:
    cert-manager.io/issuer: letsencrypt-production
spec:
  gatewayClassName: istio
  infrastructure:
    annotations:
      service.beta.kubernetes.io/port_80_health-probe_protocol: tcp
      service.beta.kubernetes.io/port_443_health-probe_protocol: tcp
      service.beta.kubernetes.io/port_15021_health-probe_protocol: tcp
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "chat.aks.rocks"
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - name: kaito-tls
